--- a/Opdracht_3.2/index.html
+++ b/Opdracht_3.2/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <Header>
+        <h1>Boekingsformulier</h1>
     </Header>
     <form action="">
         <label for="firstname">Voornaam</label>
