--- a/3.1 project/index.html
+++ b/3.1 project/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <img src="" id="logo" />
-        <ul>
-          <li><a href="achtergond infromatie.html">Achtergrond informatie</a></li>
-          <li><a href="">nav2</a></li>
-          <li><a href="">nav3</a></li>
-          <li><a href="">nav4</a></li>
-          <li><a href="">nav5</a></li>
-        </ul>
-      </nav>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <center><h1><header>Homepagina</header></h1></center>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="student1.html">Student 1</a></li>
+                <li><a href="student2.html">Student 2</a></li>
+                <li><a href="bsa.html">BSA</a></li>
+                <li><a href="examenplan.html">Examenplan</a></li>
+                <li><a href="otherpage1.html">Other Page 1</a></li>
+                <li><a href="otherpage2.html">Other Page 2</a></li>
+                <li><a href="otherpage3.html">Other Page 3</a></li>
+                <li><a href="otherpage4.html">Other Page 4</a></li>
+                <li><a href="otherpage5.html">Other Page 5</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welkom bij onze website</h1>
+        <p>dit is onze home pagine voor onze project</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Onze Website</p>
+    </footer>
 </body>
 </html>
