--- a/3.1 project/index.html
+++ b/3.1 project/index.html
@@ -15,8 +15,8 @@
                 <li><a href="student2.html">Student 2</a></li>
                 <li><a href="bsa.html">BSA</a></li>
                 <li><a href="examenplan.html">Examenplan</a></li>
-                <li><a href="otherpage1.html">Other Page 1</a></li>
-                <li><a href="otherpage2.html">Other Page 2</a></li>
+                <li><a href="Gedragscode.html">Gedragscode</a></li>
+                <li><a href="Veiligheid.html">Veiligheid</a></li>
                 <li><a href="otherpage3.html">Other Page 3</a></li>
                 <li><a href="otherpage4.html">Other Page 4</a></li>
                 <li><a href="otherpage5.html">Other Page 5</a></li>
