--- a/3.1 project/Student2.html
+++ b/3.1 project/Student2.html
@@ -26,9 +26,9 @@
     <main>
         <h1>Student 1 Page</h1>
         <h2>naam:</h2>
-        <h3>abdelkhalek El Ouali</h3>
+        <h3>Farouq El Eissati</h3>
         <h2>Leeftijd:</h2>
-         <h3>Ik ben 17 jaar oud</h3>  
+         <h3>Ik ben 16 jaar oud</h3>  
          <h2>Mijn opleiding:</h2>
          <h3>software development</h3>
     </main>
