--- a/3.1 project/index.html
+++ b/3.1 project/index.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
     <main>
-        <h1>Welkom bij onze website</h1>
-        <p>dit is onze home pagine voor onze project</p>
+        <center><h1>Welkom bij onze website</h1></center>
+        <center><p>dit is onze home pagina voor onze project die gaat over ons en onze school</p></center>
     </main>
     <footer>
         <p>&copy; 2024 Onze Website</p>
