--- a/3.1 project/Gedragscode.html
+++ b/3.1 project/Gedragscode.html
@@ -19,7 +19,7 @@
                 <li><a href="Veiligheid.html">Veiligheid</a></li>
                 <li><a href="otherpage3.html">Other Page 3</a></li>
                 <li><a href="otherpage4.html">Other Page 4</a></li>
-                <li><a href="otherpage5.html">Other Page 5</a></li>
+                <li><a href="otherpage5.html">Other Page 5</a></li>i>
             </ul>
         </nav>
     </header>
