--- a/3.1 project/Veiligheid.html
+++ b/3.1 project/Veiligheid.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Bindend Studie Advies (BSA)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,9 +17,9 @@
                 <li><a href="examenplan.html">Examenplan</a></li>
                 <li><a href="Gedragscode.html">Gedragscode</a></li>
                 <li><a href="Veiligheid.html">Veiligheid</a></li>
-                <li><a href="otherpage3.html">Other Page 3</a></li>
-                <li><a href="otherpage4.html">Other Page 4</a></li>
-                <li><a href="otherpage5.html">Other Page 5</a></li>
+                <li><a href="Canvas.html">Canvas</a></li>
+                <li><a href="Eduarte.html">Eduarte</a></li>
+                <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
             </ul>
         </nav>
     </header>
