--- a/5.2/5.1/index.html
+++ b/5.2/5.1/index.html
@@ -1,38 +1,39 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>First Year TCR Website</title>
-       <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="navbar">
-            <li><a href="">HTML/CSS</a></li>
-            <li><a href="javascript.html">Javascript</a></li>
-            <li><a href="php.html">PHP</a></li>
-            <li><a href="sql.html">SQL</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <div class="dropdown">
-                <a href="#" class="dropbtn">Jaar 2</a>
-                <div class="dropdown-content">
-                    <a href="OOP.html">OOP</a>
-                    <a href="larvelen.html">Laravel</a>
-                    <a href="Testen.html">Testen</a>
-                </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Opdracht 3</title>
+  </head>
+  <body class="index">
+    <nav>
+      <a href="index.html"><img src="./img/hacker.png"  id="logo"/></a>
+      <ul>
+        <li><a href="CSS.html">HTML/CSS</a></li>
+        <li><a href="Javascript.html">Javascript</a></li>
+        <li><a href="PHP.html">PHP</a></li>
+        <li><a href="SQL.html">SQL</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Jaar 2</button>
+            <div class="dropdown-content">
+                <a href="#">OOP</a>
+                <a href="#">Laravel</a>
+                <a href="#">Testen</a>
             </div>
         </div>
-        <div class="content">
-            <h1>First Year TCR</h1>
-            <h2>Programming Languages</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae augue nec libero varius egestas.</p>
-            <img src="path/to/image.png" alt="Example Image">
-        </div>
-        <div class="footer">
-            <p>© 2024 First Year TCR. All rights reserved.</p>
-        </div>
-    </body>
-    </html>
-    
+        </li>
+      </ul>
+    </nav>
+    <h1 class="I-1">First Year TCR <br> Programing Language</h1>
+  </body>
+</html>
