--- a/3.1 project/BSA.html
+++ b/3.1 project/BSA.html
@@ -20,8 +20,11 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
+    </header>
     <main>
         <h1>Bindend Studie Advies (BSA)</h1>
         <section>
@@ -41,6 +44,7 @@
             <p>Als je problemen hebt met het behalen van je studiepunten, kun je hulp zoeken bij je docenten, studieloopbaanbegeleider of het studieadviesbureau. Zij kunnen je adviseren en ondersteunen om je studieprestaties te verbeteren.</p>
         </section>
     </main>
+    <br><br><br><br><br>
     <footer>
         <p>&copy; 2024 Onze Website</p>
     </footer>
