--- a/3.1 project/Eduarte.html
+++ b/3.1 project/Eduarte.html
@@ -20,6 +20,8 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
