--- a/3.1 project/Gedragscode.html
+++ b/3.1 project/Gedragscode.html
@@ -20,11 +20,14 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
-    <br><br><br><br><br><br><br>
-    <br>
+    <center><h1>De Gedragscode</h1></center>
+    <br><br><br>
+  
     <center><p>Specifieke regels locatie
         Als je te laat bent
         Als je te laat arriveert, meld je dit bij de receptie. De docent beslist of je nog mag deelnemen aan de les. De verloren tijd wordt geregistreerd als ongeoorloofd verzuim. Ook te laat komen tussen de lessen door wordt genoteerd als ongeoorloofd verzuim.
@@ -40,6 +43,7 @@
         </p></center>
     <main>
     </main>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
         <p>&copy; 2024 Onze Website</p>
     </footer>
