--- a/3.1 project/Opleidingswijzer.html
+++ b/3.1 project/Opleidingswijzer.html
@@ -20,12 +20,15 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
         <h1>Opleidingswijzer - Techniek College Rotterdam</h1>
         <section>
+            <br>
             <h2>Overzicht van Opleidingen</h2>
             <ul>
                 <li>Bouw en Infra</li>
@@ -73,5 +76,8 @@
             </ul>
         </section>
     </div>
+    <footer>
+        <p>&copy; 2024 Onze Website</p>
+    </footer>
 </body>
 </html>
