--- a/3.1 project/Student2.html
+++ b/3.1 project/Student2.html
@@ -20,17 +20,23 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>Student 1 Page</h1>
+        <br><br>
         <h2>naam:</h2>
         <h3>Farouq El Eissati</h3>
+        <br><br>
         <h2>Leeftijd:</h2>
          <h3>Ik ben 16 jaar oud</h3>  
+         <br><br>
          <h2>Mijn opleiding:</h2>
          <h3>software development</h3>
+         <br><br><br><br><br><br><br><br><br>
     </main>
     <footer>
         <p>&copy; 2024 Our Website</p>
