--- a/3.1 project/Veiligheid.html
+++ b/3.1 project/Veiligheid.html
@@ -20,9 +20,12 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
+    <Center><h1>Veiligheid van TCR</h1></Center>
     <br><br><br><br><br><br>    
     Veiligheid
 
@@ -42,6 +45,7 @@ Verlaat het verzamelpunt pas als je toestemming hebt gekregen.
 EHBO/Bedrijfshulpverlening Bij ongelukken of als iemand zich niet goed voelt, kunnen studenten hulp vragen van gediplomeerde EHBO'ers en getrainde bedrijfshulpverleners. In de werkplaatsen en bij de balie is een EHBO-koffer en een AED beschikbaar. Daarnaast zijn er getrainde bedrijfshulpverleners die weten hoe te handelen in geval van ziekte of een ongeval.
     <main>
     </main>
+    <br><br><br><br><br><br><br><br><br><br>
     <footer>
         <p>&copy; 2024 Onze Website</p>
     </footer>
