--- a/3.1 project/index.html
+++ b/3.1 project/index.html
@@ -20,6 +20,8 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
@@ -27,6 +29,7 @@
         <center><h1>Welkom bij onze website</h1></center>
         <center><p>dit is onze home pagina voor onze project die gaat over ons en onze school</p></center>
     </main>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
         <p>&copy; 2024 Onze Website</p>
     </footer>
