--- a/3.1 project/Canvas.html
+++ b/3.1 project/Canvas.html
@@ -20,6 +20,8 @@
                 <li><a href="Canvas.html">Canvas</a></li>
                 <li><a href="Eduarte.html">Eduarte</a></li>
                 <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                <li><a href="begeleiding.html">begeleiding</a></li>
+                <li><a href="software.html">Software</a></li>
             </ul>
         </nav>
     </header>
@@ -75,5 +77,8 @@
             </ul>
         </section>
     </div>
+    <footer>
+        <p>&copy; 2024 Onze Website</p>
+    </footer>
 </body>
 </html>
