--- a/3.1 project/Examenplan.html
+++ b/3.1 project/Examenplan.html
@@ -7,66 +7,70 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="student1.html">Student 1</a></li>
-                <li><a href="student2.html">Student 2</a></li>
-                <li><a href="bsa.html">BSA</a></li>
-                <li><a href="examenplan.html">Examenplan</a></li>
-                <li><a href="Gedragscode.html">Gedragscode</a></li>
-                <li><a href="Veiligheid.html">Veiligheid</a></li>
-                <li><a href="Canvas.html">Canvas</a></li>
-                <li><a href="Eduarte.html">Eduarte</a></li>
-                <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="student1.html">Student 1</a></li>
+                    <li><a href="student2.html">Student 2</a></li>
+                    <li><a href="bsa.html">BSA</a></li>
+                    <li><a href="examenplan.html">Examenplan</a></li>
+                    <li><a href="Gedragscode.html">Gedragscode</a></li>
+                    <li><a href="Veiligheid.html">Veiligheid</a></li>
+                    <li><a href="Canvas.html">Canvas</a></li>
+                    <li><a href="Eduarte.html">Eduarte</a></li>
+                    <li><a href="Opleidingswijzer.html">Opleidings Wijzer</a></li>
+                    <li><a href="begeleiding.html">begeleiding</a></li>
+                    <li><a href="software.html">Software</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <h1>Examenplan</h1>
-        <section>
-            <h2>Overzicht van het Examenplan</h2>
-            <p>Het examenplan geeft een gedetailleerd overzicht van alle examens die gedurende de opleiding afgelegd moeten worden. Dit omvat zowel theoretische als praktische examens.</p>
-        </section>
-        <section>
-            <h2>Soorten Examens</h2>
-            <ul>
-                <li><strong>Schriftelijke Tentamens:</strong> Theorie-examens waarbij kennis en begrip van de lesstof wordt getoetst.</li>
-                <li><strong>Praktijkexamens:</strong> Toetsen waarbij vaardigheden en toepassing van kennis in een praktijkomgeving worden beoordeeld.</li>
-                <li><strong>Mondelinge Tentamens:</strong> Gesprekken waarbij de student mondelinge antwoorden geeft op vragen van de docent.</li>
-                <li><strong>Projectopdrachten:</strong> Groeps- of individuele projecten die beoordeeld worden op basis van een presentatie of rapport.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Examenplanning</h2>
-            <p>De examenplanning bevat belangrijke data voor alle tentamens en toetsen. Zorg ervoor dat je deze data goed in je agenda noteert:</p>
-            <ul>
-                <li><strong>Periode 1:</strong> 1 september - 31 oktober</li>
-                <li><strong>Periode 2:</strong> 1 november - 31 december</li>
-                <li><strong>Periode 3:</strong> 1 januari - 28 februari</li>
-                <li><strong>Periode 4:</strong> 1 maart - 30 april</li>
-                <li><strong>Periode 5:</strong> 1 mei - 30 juni</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Regels en Procedures</h2>
-            <p>Het is belangrijk om op de hoogte te zijn van de regels en procedures rond examens:</p>
-            <ul>
-                <li>Kom op tijd voor je examen. Te laat komen kan betekenen dat je niet meer deel mag nemen.</li>
-                <li>Zorg ervoor dat je alle benodigde materialen bij je hebt, zoals pennen, rekenmachine, identiteitsbewijs, etc.</li>
-                <li>Mobiele telefoons en andere elektronische apparaten zijn niet toegestaan in de examenruimte.</li>
-                <li>Plagiaat en fraude worden streng bestraft. Zorg ervoor dat al je werk origineel is.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Contact en Ondersteuning</h2>
-            <p>Als je vragen hebt over het examenplan of extra ondersteuning nodig hebt, kun je contact opnemen met je studieloopbaanbegeleider of het examenbureau.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Onze Website</p>
-    </footer>
+        <main>
+            <h1>Examenplan</h1>
+            <section>
+                <h2>Overzicht van het Examenplan</h2>
+                <p>Het examenplan geeft een gedetailleerd overzicht van alle examens die gedurende de opleiding afgelegd moeten worden. Dit omvat zowel theoretische als praktische examens.</p>
+            </section>
+            <section>
+                <h2>Soorten Examens</h2>
+                <ul>
+                    <li><strong>Schriftelijke Tentamens:</strong> Theorie-examens waarbij kennis en begrip van de lesstof wordt getoetst.</li>
+                    <li><strong>Praktijkexamens:</strong> Toetsen waarbij vaardigheden en toepassing van kennis in een praktijkomgeving worden beoordeeld.</li>
+                    <li><strong>Mondelinge Tentamens:</strong> Gesprekken waarbij de student mondelinge antwoorden geeft op vragen van de docent.</li>
+                    <li><strong>Projectopdrachten:</strong> Groeps- of individuele projecten die beoordeeld worden op basis van een presentatie of rapport.</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Examenplanning</h2>
+                <p>De examenplanning bevat belangrijke data voor alle tentamens en toetsen. Zorg ervoor dat je deze data goed in je agenda noteert:</p>
+                <ul>
+                    <li><strong>Periode 1:</strong> 1 september - 31 oktober</li>
+                    <li><strong>Periode 2:</strong> 1 november - 31 december</li>
+                    <li><strong>Periode 3:</strong> 1 januari - 28 februari</li>
+                    <li><strong>Periode 4:</strong> 1 maart - 30 april</li>
+                    <li><strong>Periode 5:</strong> 1 mei - 30 juni</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Regels en Procedures</h2>
+                <p>Het is belangrijk om op de hoogte te zijn van de regels en procedures rond examens:</p>
+                <ul>
+                    <li>Kom op tijd voor je examen. Te laat komen kan betekenen dat je niet meer deel mag nemen.</li>
+                    <li>Zorg ervoor dat je alle benodigde materialen bij je hebt, zoals pennen, rekenmachine, identiteitsbewijs, etc.</li>
+                    <li>Mobiele telefoons en andere elektronische apparaten zijn niet toegestaan in de examenruimte.</li>
+                    <li>Plagiaat en fraude worden streng bestraft. Zorg ervoor dat al je werk origineel is.</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Contact en Ondersteuning</h2>
+                <p>Als je vragen hebt over het examenplan of extra ondersteuning nodig hebt, kun je contact opnemen met je studieloopbaanbegeleider of het examenbureau.</p>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2024 Onze Website</p>
+        </footer>
+    </div>
 </body>
 </html>
