--- a/3.1 project/index.html
+++ b/3.1 project/index.html
@@ -29,6 +29,7 @@
         <center><h1>Welkom bij onze website</h1></center>
         <center><p>dit is onze home pagina voor onze project die gaat over ons en onze school</p></center>
     </main>
+ <center><img src="img/afbeelding.jpg" alt="school"></center>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
         <p>&copy; 2024 Onze Website</p>
