--- a/3.1 project/software.html
+++ b/3.1 project/software.html
@@ -32,6 +32,7 @@
 <br><br>CANVAS De functie van het programmacanvas is om tijdens de voorbereiding en opbouw van een project of programma te helpen bij het bespreken en uitwerken van verschillende onderdelen. Het helpt iedereen die betrokken is bij het project om samen te praten en belangrijke punten duidelijk te maken. Het maakt het <br>   makkelijker om het gesprek te voeren en ervoor te zorgen dat alles goed op elkaar aansluit.</li>
 </ul> 
 </div>
+<img src="img/downloads (5).jpg" alt="">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer>
     <p>&copy; 2024 Onze Website</p>
