--- a/3.1 project/Student1.html
+++ b/3.1 project/Student1.html
@@ -36,6 +36,7 @@
          <br><br><br>
          <h2>Mijn opleiding:</h2>
          <h3>software development</h3>
+         <center><img src="img/abdel.png" alt="abdel"></center>
          <br><br><br><br><br><br><br>
     </main>
     <footer>
