--- a/3.1 project/software.html
+++ b/3.1 project/software.html
@@ -26,13 +26,12 @@
 <div class="container">
     
 <center><h1> SOFTWARE die we gebruiken</center>
-    <li><h2>Visual studio code en canvas zijn de gratis software die ons aangeboden word </h2> <br> 
+    <h2>Visual studio code en canvas zijn de gratis software die ons aangeboden word </h2> <br> 
    <h2>wat zijn deze softwares?</h2> 
     Microsoft Visual Studio Het is een geïntegreerde ontwikkelomgeving (IDE) ontworpen om een breed scala aan programmeertalen te ondersteunen, zoals C#, C++, VB.NET, F#, JavaScript, TypeScript, XML, XSLT, HTML en CSS. Het wordt veel gebruikt voor de ontwikkeling van desktop, web, mobiele en cloud service applicaties.
 <br><br>CANVAS De functie van het programmacanvas is om tijdens de voorbereiding en opbouw van een project of programma te helpen bij het bespreken en uitwerken van verschillende onderdelen. Het helpt iedereen die betrokken is bij het project om samen te praten en belangrijke punten duidelijk te maken. Het maakt het <br>   makkelijker om het gesprek te voeren en ervoor te zorgen dat alles goed op elkaar aansluit.</li>
-</ul> 
 </div>
-<img src="img/downloads (5).jpg" alt="">
+<center><img src="img/downloads (5).jpg" alt=""></center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer>
     <p>&copy; 2024 Onze Website</p>
